--- a/appinfo.json
+++ b/appinfo.json
@@ -28,6 +28,11 @@
                 "file": "fonts/UbuntuMono-Regular.ttf",
                 "name": "MONO_FONT_14",
                 "type": "font"
+            },
+            {
+                "file": "images/gengar.png",
+                "name": "IMAGES_GENGAR_PNG",
+                "type": "png"
             }
         ]
     },
